--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-uuid": "^1.0.2"
+    "react-uuid": "^1.0.2",
+    "use-color-theme": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
