--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.3.3",
