--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html2canvas": "^1.3.3",
     "mongoose": "^6.0.14",
     "next": "12.0.4",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-uuid": "^1.0.2",
